Prevent button wrapping in narrow mobile views

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,10 @@ div#topmenu {
   margin: 0 1em 0 0;
 }
 
+form#postform {
+  white-space: nowrap;
+}
+
 textarea#postentry {
   margin: 1.1em 0 1em 1em;
   padding: 0.4em 0.3em 0.1em 0.3em;
